--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,6 +12,12 @@
         <li class="nav-item">
         <%= link_to "About", home_about_path, class:'nav-link' %>
         </li>
+        <li>
+         <%= link_to "Friend", friends_path, class:'nav-link' %>
+        </li>
+        <li>
+         <%= link_to "Create Friend", new_friend_path, class:'nav-link' %>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
