--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -15,9 +15,29 @@
         <li>
          <%= link_to "Friend", friends_path, class:'nav-link' %>
         </li>
-        <li>
-         <%= link_to "Create Friend", new_friend_path, class:'nav-link' %>
-        </li>
+
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to "Create Friend", new_friend_path, class:'nav-link' %>
+          </li>
+          <li>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:'nav-link' %>
+          </li>
+          <li>
+          <%= link_to "Edit Profile", edit_user_registration_path, class:'nav-link' %>
+          </li>
+
+        <% else %>
+
+          <li>
+          <%= link_to "Sign Up", new_user_registration_path, class:'nav-link' %>
+          </li>
+          <li>
+          <%= link_to "Sign In", new_user_session_path, class:'nav-link' %>
+          </li>
+
+        <% end %>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
