--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,11 @@
   </head>
   <body>
   <%= render 'home/header'%>
-  <div classname="container-sm">
+  <div class="container">
     <% if notice %>
-    <br/>
-    <%= render 'layouts/alerts' %>
+    <%= render 'layouts/notice' %>
     <% end %>
-
+  <br/>
       <%= yield %>
     <h1>FOOTER </h1>
 
